--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
   "short_name": "CraftedWebs",
-  "name": "CraftedWebs - Profesjonalne Projektowanie Stron",
+  "name": "CraftedWebs - Profesjonalne Projektowanie Stron i Audyty",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "/logo192.png", 
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo512.png",
+      "src": "/logo512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#0f172a",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "description": "Profesjonalne usługi projektowania stron internetowych i audytów - CraftedWebs"
 }
